--- a/KesterTestTwo/www/index.html
+++ b/KesterTestTwo/www/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="./js/jquery.mobile-1.4.3.js"></script>
     
-    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="cordova.js" window.location='http://www.neuteng.com/?appp=1'></script>
     
 </head>
 
